--- a/222.ipynb
+++ b/222.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = \"non_linear_property_dataset.csv\"  # Update with actual file path\n",
+    "file_path = \"non_linear_property_dataset.csv\"  # \n",
     "df = pd.read_csv(file_path)"
    ]
   },
